fixed pixel gap in profession

--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ header {
   content: '';
   position: absolute;
   bottom: 0;
-  left: 100%;
+  left: 99%;
   width: 8px;
   height: 0;
   border-top: 30px solid #ffee22;
